# pyproject.nix

./: .envrc  .envrc.lix  .envrc.nix  .gitignore  404.html  FAQ.html  HACKING.html  LICENSE  Procfile  README.md  build.html  default.nix  flake-module.nix  flake.nix  highlight.js  index.html  install.html  introduction.html  nixpkgs-build.html  print.html  pyproject.toml  reference.html  renovate.json  searchindex.js  searchindex.json  treefmt.nix  treefmt.toml
.github/workflows/: github-pages.yml  nix-github-actions.yml
builders/: ecosystem.html  hacks.html  minimal-lock.nix  overriding.html  packages.html  usage.html
dev/: test_runner.py  treefmt.nix
doc/: .gitignore  FAQ.md  HACKING.md  Makefile  book.toml  build_md.py  conf.py  default.nix  index.md  index.rst  nixdoc.py
doc/dev/: highlightjs.nix  update_highlight.sh
doc/src/: FAQ.md  (+10 more)
fetchers/: default.html  default.nix  fetch-from-legacy.py
lib/: adapters.nix  default.nix  eggs.html  eggs.nix  filter.nix  pep427.nix  pep440.html  pep440.nix  pep491.nix  pep508.html  pep508.nix  pep518.html  pep599.html  pep599.nix  pep600.html  pep600.nix  pep621.html  pep621.nix  pep656.html  pep656.nix  pep723.html  pep723.nix  pip.html  pip.nix  poetry.html  poetry.nix  project.html  project.nix  pypa.html  pypa.nix  renderers.html  renderers.nix  scripts.html  scripts.nix  test.nix  test_eggs.nix  test_filter.nix  test_pep427.nix  test_pep440.nix  test_pep491.nix  (+16 more)
npins/: default.nix  sources.json
test/: default.nix
tests/: conftest.py  default.nix  test_nix.py
use-cases/: pyproject.html  requirements.html
(+50 files in other folders)
