[project]
name = "pyproject.nix"
version = "0.1.0"
description = ""
authors = [
    {name = "adisbladis", email = "adisbladis@gmail.com"},
]
dependencies = []
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.2.1",
    "pytest-parallel>=0.1.1",
    "black>=23.7.0",
    "mypy>=1.4.1",
]
