[project]
name = "pyproject.nix"
version = "0.1.0"
description = ""
authors = [
    {name = "adisbladis", email = "adisbladis@gmail.com"},
]
dependencies = []
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.2.1",
    "pytest-parallel>=0.1.1",
    "black>=23.7.0",
    "mypy>=1.4.1",
    "pytest-watch>=4.2.0",
    "sphinx>=7.0.1",
    "myst-parser>=2.0.0",
    "ipython>=8.14.0",
]

[tool.black]
line-length = 120
target-version = ["py37", "py38", "py39", "py310"]

[tool.ruff]
line-length = 120
extend-select = [
  "I",    # isort
  "B",    # flake8-bugbear
  "C4",   # flake8-comprehensions
  "PGH",  # pygrep-hooks
  "RUF",  # ruff
  "W",    # pycodestyle
  "YTT",  # flake8-2020
]
extend-ignore = ["B018", "B019"]
src = ["src"]
exclude = ["tests/fixtures"]
target-version = "py37"

[tool.ruff.mccabe]
max-complexity = 10
